CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(EGL)

FILE(GLOB_RECURSE INCLUDE_FILES include/*.h)
FILE(GLOB_RECURSE INCLUDE_FILES include/*.h)

SET(SOURCE_FILES 
	include/EGL/egl.h
	include/EGL/eglext.h
	include/EGL/eglplatform.h
	src/egl.c
	src/egl_common.c
	src/egl_internal.h)

IF(WIN32)
	SET(PLATFORM_SOURCE_FILES src/egl_windows.c)
ELSE()
	SET(PLATFORM_SOURCE_FILES src/egl_x11.c)
ENDIF()

ADD_LIBRARY(EGL 
	${SOURCE_FILES} 
	${SOURCE_FILES} 
	${PLATFORM_SOURCE_FILES}
)

TARGET_INCLUDE_DIRECTORIES(EGL
	PUBLIC include
)

ADD_DEFINITIONS(-DKHRONOS_API_EXPORT -DGLEW_STATIC)

ADD_SUBDIRECTORY(test)